name:                slicer
version:             1.0.0.0
synopsis:            Companion code to "Imperative Functional Programs that Explain their Work" paper
license:             GPL-3
license-file:        LICENSE
author:              Wilmer Ricciotti <wricciot@inf.ed.ac.uk>, Jan Stolarek <jan.stolarek@ed.ac.uk>, Roly Perera <rperera@inf.ed.ac.uk>, James Cheney <jcheney@inf.ed.ac.uk>
maintainer:          Jan Stolarek <jan.stolarek@ed.ac.uk>
bug-reports:         https://github.com/jstolarek/slicer/issues
tested-with:         GHC == 8.0.1
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
category:            Slicing
extra-source-files:  README.md

source-repository this
  type:     git
  location: https://github.com/jstolarek/slicer.git

library
  hs-source-dirs:   lib
  exposed-modules:  Language.Slicer.Run
                    Language.Slicer.Absyn
                    Language.Slicer.Core
                    Language.Slicer.Env
                    Language.Slicer.Monad.Eval
                    Language.Slicer.Desugar
                    Language.Slicer.Error
                    Language.Slicer.Eval
                    Language.Slicer.Monad
                    Language.Slicer.Monad.Desugar
                    Language.Slicer.Monad.Slice
                    Language.Slicer.Parser
                    Language.Slicer.Primitives
                    Language.Slicer.Resugar
                    Language.Slicer.Slice
                    Language.Slicer.UpperSemiLattice
  build-depends:    base       >= 4.14,
                    containers >= 0.5 && < 0.6,
                    deepseq    >= 1.4 && < 1.5,
                    directory  >= 1.2.6.2,
                    filepath   >= 1.4 && < 1.5,
                    hashable   >= 1.2,
                    haskeline  >= 0.7.2.3,
                    mtl        >= 2.2.1,
                    parsec     >= 3.1 && < 3.2,
                    pretty     >= 1.1 && < 1.2,
                    text       >= 1.2
  ghc-options:      -Wall
  default-language: Haskell2010

executable slicer
  hs-source-dirs:   src
  main-is:          Language/Slicer/Main.hs
  build-depends:    base       >= 4.14,
                    directory  >= 1.2.6.2,
                    exceptions >= 0.10.4,
                    filepath   >= 1.4,
                    haskeline  >= 0.7.2.3,
                    mtl        >= 2.2.1,
                    pretty     >= 1.1 && < 1.2,
                    slicer     >= 1.0.0.0
  other-modules:    Language.Slicer.Monad.Repl
                    Language.Slicer.Repl
  ghc-options:      -Wall
  default-language: Haskell2010

test-suite slicer-test-suite
  hs-source-dirs:   tests
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall
  default-language: Haskell2010
  main-is:          SlicerTestSuite.hs
  build-depends:    base         >= 4.14,
                    directory    >= 1.2.6.2,
                    filepath     >= 1.4,
                    process      >= 1.4,
                    tasty        >= 0.11,
                    tasty-golden >= 2.3
  other-modules:    SlicerTestSuiteUtils

benchmark slicer-benchmark-suite
  hs-source-dirs:   bench
  type:             exitcode-stdio-1.0
  main-is:          SlicerBenchmarkSuite.hs
  build-depends:    base       >= 4.14,
                    criterion  >= 1.1.4.0,
                    deepseq    >= 1.4 && < 1.5,
                    filepath   >= 1.4 && < 1.5,
                    process    >= 1.4,
                    slicer     >= 1.0.0.0
  ghc-options:      -Wall
                    -O2
  default-language: Haskell2010
